# objstor

./: .gitignore  Cargo.toml  README.md  init.sql  package.json
.github/workflows/: ci.yml  release.yml
client/: package.json
client/public/: index.html
client/src/: App.test.tsx  App.tsx  routes.ts  theme.ts
client/src/Components/: Link.tsx
client/src/Pages/: ChangePasswordPage.tsx  HomePage.tsx
objstor/: Cargo.toml
objstor-cli/: Cargo.toml
objstor-cli/src/: auth.rs  config.rs  lib.rs  main.rs  server.rs  state.rs
objstor-cli/src/api/: user.rs
objstor/src/: error.rs  lib.rs
sqlite-provider/: Cargo.toml
sqlite-provider/migrations/: 0001_create_users_table.sql  0002_create_storage_table.sql  0003_create_object_table.sql
sqlite-provider/src/: lib.rs
src/: main.rs
src/objstor/: appstate.rs  config.rs  hash.rs  id.rs  mod.rs  objects.rs  opt.rs  user.rs  utils.rs
src/objstor/backend/: mod.rs  sqlite.rs  user.rs
src/objstor/backends/: mod.rs  sqlite.rs
src/objstor/server/: mod.rs  state.rs  webdav.rs
tmp/src/objstor/: mod.rs  opt.rs  run.rs  user.rs  utils.rs
tmp/src/objstor/backend/: mod.rs  sqlite.rs
tmp/src/objstor/server/: webdav.rs
webdav/: Cargo.toml
webdav/src/: lib.rs
