[package]
name = "objstor"
version = "0.1.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
description = "objstor"
edition = "2018"
license = "MIT"
repository = "https://github.com/prabirshrestha/objstor"

[dependencies]
anyhow = "1.0.38"
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.42"
bcrypt = "0.9.0"
chrono = "0.4.19"
clap = "3.0.0-beta.1"
dotenv = "0.15.0"
sqlx = { version = "0.5.1", features = [ "runtime-async-std-native-rustls", "chrono", "sqlite" ] }
tide = "0.16.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
