[package]
name = "objstor-cli"
version = "0.1.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.40" }
async-std = { version = "1.9.0", features = ["attributes"] }
clap = { version = "3.0.0-beta.2" }
dotenv = "0.15.0"
objstor = { path = "../objstor" }
sqlite-provider = { path = "../sqlite-provider" }
tide = { version = "0.16.0" }
