[package]
name = "objstor"
version = "0.1.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0" }
tide = { version = "0.16.0" }
clap = { version = "3.0.0-beta.2" }
