[package]
name = "objstor"
version = "0.1.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0" }
async-trait = "0.1.50"
bcrypt = "0.9.0"
clap = { version = "3.0.0-beta.2" }
nanoid = "0.4.0"
thiserror = "1.0.24"
tide = { version = "0.16.0" }
