[package]
name = "objstor-sqlite-provider"
version = "0.1.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
objstor = { path = "../objstor" }
sqlx = { version = "0.5.2", features = [ "runtime-async-std-rustls", "chrono", "migrate", "sqlite" ] }
